# ex-pertie

./: .gitignore  .taskrc  AGENTS.md  CLAUDE.md  podman-compose.yml
backend/: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.dev.yml  openapi_schema.json  podman-compose.yml  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_auth.py  20260408_001_add_translation_models.py  20260409_001_add_hotel_and_business_models.py  20260525_001_add_booking_models.py  20260525_002_add_booking_reference.py  20260525_003_add_terminology.py  20260612_001_add_translation_cache.py
backend/app/: __init__.py  main.py
backend/app/api/: AGENTS.md
backend/app/core/: __init__.py  config.py  database.py  deps.py  logging.py  redis.py  security.py  worker.py
backend/app/generators/: __init__.py  excel_template_generator.py
backend/app/middleware/: __init__.py  cors.py  exception.py
backend/app/models/: __init__.py  base.py  booking.py  booking_reference.py  expedia_template.py  export_history.py  hotel.py  import_history.py  role.py  room.py  terminology.py  translation.py  translation_cache.py  user.py  user_role.py
backend/app/parsers/: __init__.py  excel_parser.py
backend/app/repositories/: __init__.py  hotel_repository.py
backend/app/schemas/: __init__.py  _translation.py  auth.py  booking.py  booking_reference.py  expedia_template.py  export.py  hotel.py  import_history.py  import_progress.py  response.py  room.py
backend/app/services/: AGENTS.md  __init__.py  asso_service.py  auth.py  base.py  booking_hotel_service.py  booking_linkage_service.py  booking_reference_service.py  booking_room_service.py  booking_validator.py  expedia_template_service.py  export_history_service.py  export_service.py  field_mapping_service.py  glossary.py  hotel_batch_service.py  hotel_service.py  (+14 more)
backend/docs/: api-summary.md  api.md
backend/scripts/: __init__.py  cli_init.py  init_test_users.py  seed_data.py  translate_cli.py
backend/tests/: conftest.py  test_auth.py  test_booking_models.py  test_export_services.py  test_health.py  test_hotel_import_service.py  test_hotel_models.py  test_room_import_service.py  test_security.py  test_translate_cli.py  test_translation_models.py  test_users.py  test_validators.py
(+192 files in other folders)
